--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
       <p>
         URL stands for Uniform Resource Locator. It is basically the address of
         a resource on the Web. Examples of resources are HTML pages, CSS
-        documents and images.
+        documents and images. When a URL is typed into the address bar of a
+        browser, the browser will load the resource (at least if it's an
+        existing URL). Typically a URL consists of a protocol (or scheme), a
+        domain name and a file name. URLs are also used by other tecnologies,
+        for example in html files where they are used to create links or display
+        images and videos, among other things.
       </p>
       <img
         src="andrew-neel-cckf4TsHAuw-unsplash.jpg"
-        alt="coffee-and-computer"
+        alt="Coffee and computer"
       />
-      <p style="text-align: left">Find out more about URLs here:</p>
+      <span>Photo by Andrew Neel on Unsplash.</span>
+      <p style="text-align: left; margin-top: 20px">
+        Find out more about URLs here:
+      </p>
       <ul>
         <li>
           <a
