--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         documents and images. When a URL is typed into the address bar of a
         browser, the browser will load the resource (at least if it's an
         existing URL). Typically a URL consists of a protocol (or scheme), a
-        domain name and a file name. URLs are also used by other tecnologies,
+        domain name and a file name. URLs are also used by other technologies,
         for example in html files where they are used to create links or display
         images and videos, among other things.
       </p>
