--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
         src="andrew-neel-cckf4TsHAuw-unsplash.jpg"
         alt="Coffee and computer"
       />
-      <span>Photo by Andrew Neel on Unsplash.</span>
+      <span
+        >Photo by
+        <a
+          href="https://unsplash.com/@andrewtneel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          >Andrew Neel</a
+        >
+        on
+        <a
+          href="https://unsplash.com/s/photos/web?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+          >Unsplash</a
+        ></span
+      >
       <p style="text-align: left; margin-top: 20px">
         Find out more about URLs here:
       </p>
